# cocapn-fleet-ultimate

./: README.md  package.json  pyproject.toml
docs/tutorials/: quick-start.md
planning/: mesh-analysis.md  strategic-plan-2026-2031.md
presentations/: a2a-architecture.html  fleet-overview.html  technical-spec.html  trinity-deep-dive.html
src/cocapn_fleet/: __init__.py  cli.py
src/cocapn_fleet/a2a/: client.py  server.py
src/cocapn_fleet/breeding/: orchestrator.py
src/cocapn_fleet/core/: dna.py  fleet.py
src/cocapn_fleet/flux/: checker.py
src/cocapn_fleet/grammar/: engine.py
src/cocapn_fleet/nexus/: federation.py
src/cocapn_fleet/plato/: room.py
src/cocapn_fleet/trinity/: scorer.py
tests/: conftest.py  test_breeding.py  test_core.py  test_dna.py  test_flux.py  test_grammar.py  test_nexus.py  test_plato.py  test_trinity.py
web/common/: nav.js  styles.css
web/demos/: a2a.html  flux.html  plato.html  trinity.html  turbovec.html
web/landing/: index.html
web/tutorials/: index.html
